# esp-tflite-micro

examples/blinking_led_pir/: CMakeLists.txt
examples/blinking_led_pir/main/: CMakeLists.txt  Kconfig.projbuild  blink_example_main.c  pir_blink_main.c
examples/person_detection/: CMakeLists.txt
examples/person_detection/main/: CMakeLists.txt  Kconfig.projbuild  app_camera_esp.c  app_camera_esp.h  detection_responder.cc  detection_responder.h  idf_component.yml  image_provider.cc  image_provider.h  main.cc  main_functions.cc  main_functions.h  rtc_wake_stub_pir_debounce.c  rtc_wake_stub_pir_debounce.h  webserver.c  webserver.h  wifi_connection.cc  wifi_connection.h
examples/pir_deep_sleep_wakeup/: CMakeLists.txt
examples/pir_deep_sleep_wakeup/main/: CMakeLists.txt  Kconfig.projbuild  pir_wakeup_main.c
examples/wifi-streaming/: CMakeLists.txt
examples/wifi-streaming/main/: CMakeLists.txt  app_camera_esp.c  app_camera_esp.h  idf_component.yml  main.c
examples/xiao_pir_ulp/deep_sleep_wake_stub/: CMakeLists.txt
examples/xiao_pir_ulp/deep_sleep_wake_stub/main/: CMakeLists.txt  pir_xiao_driver.c  rtc_wake_stub_PIR_XIAO.c  rtc_wake_stub_PIR_XIAO.h  wake_stub_main.c
